--- a/skill lab/ass9/Untitled0.ipynb
+++ b/skill lab/ass9/Untitled0.ipynb
@@ -187,6 +187,62 @@
         "arr_ri=np.random.randint(10,100,7)\n",
         "print(arr_ri)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1. 0.]\n",
+            " [0. 1.]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "arr_I =np.eye(2)\n",
+        "print(arr_I)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 2 3]\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      7\u001b[39m x_2 = [(\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m), (\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m)]\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m a_2 = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(a_2)\n",
+            "\u001b[31mValueError\u001b[39m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "x_1 = (1, 2, 3)\n",
+        "a_1 = np.asarray(x_1)\n",
+        "print(a_1)\n",
+        "\n",
+        "import numpy as np\n",
+        "x_2 = [(1, 2, 3), (4,5)]\n",
+        "a_2 = np.asarray(x_2)\n",
+        "print(a_2)"
+      ]
     }
   ],
   "metadata": {
@@ -198,7 +254,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.13.7"
     }
   },
