--- a/skill lab/ass9/Untitled0.ipynb
+++ b/skill lab/ass9/Untitled0.ipynb
@@ -233,7 +233,32 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "a=np.array([[1,2,3],[4,5,6]])\n",
+        "b=a.reshape(1,2,3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[1,2,3],[4,5,6]])\n",
+        "a.itemsize"
+      ]
     }
   ],
   "metadata": {
