--- a/skill lab/ass9/Untitled0.ipynb
+++ b/skill lab/ass9/Untitled0.ipynb
@@ -259,6 +259,28 @@
         "a=np.array([[1,2,3],[4,5,6]])\n",
         "a.itemsize"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "a=np.array([[1,2,3],[4,5,6]])\n",
+        "a.ndim"
+      ]
     }
   ],
   "metadata": {
