--- a/skill lab/ass9/Untitled0.ipynb
+++ b/skill lab/ass9/Untitled0.ipynb
@@ -281,6 +281,27 @@
         "a=np.array([[1,2,3],[4,5,6]])\n",
         "a.ndim"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "7\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "arr = np.arange(10)\n",
+        "print(arr)\n",
+        "print(arr[7])"
+      ]
     }
   ],
   "metadata": {
