--- a/skill lab/ass10/unnited.ipynb
+++ b/skill lab/ass10/unnited.ipynb
@@ -2,19 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ab28e717",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m ds = pd.Series([\u001b[32m2\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m8\u001b[39m, \u001b[32m10\u001b[39m])\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mpandas Series and its type:\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas Series and its type:\n",
+      "0     2\n",
+      "1     4\n",
+      "2     6\n",
+      "3     8\n",
+      "4    10\n",
+      "dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "pandas Series as a list:\n",
+      "[2, 4, 6, 8, 10]\n",
+      "<class 'list'>\n"
      ]
     }
    ],
@@ -29,6 +35,44 @@
     "print(\"pandas Series as a list:\")\n",
     "print(ds.tolist())\n",
     "print(type(ds.tolist()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "72828d96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Array:\n",
+      "[10 20 30 40 50]\n",
+      "\n",
+      "Pandas Series:\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "arr = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "series = pd.Series(arr)\n",
+    "\n",
+    "print(\"NumPy Array:\")\n",
+    "print(arr)\n",
+    "\n",
+    "print(\"\\nPandas Series:\")\n",
+    "print(series)\n"
    ]
   }
  ],
