--- a/skill lab/ass10/unnited.ipynb
+++ b/skill lab/ass10/unnited.ipynb
@@ -81,7 +81,24 @@
    "id": "26fc2863",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# CSV file\n",
+    "df_csv = pd.read_csv(\"data.csv\")\n",
+    "\n",
+    "# Excel file\n",
+    "df_excel = pd.read_excel(\"data.xlsx\")\n",
+    "\n",
+    "# TSV (tab-separated)\n",
+    "df_tsv = pd.read_csv(\"data.tsv\", sep=\"\\t\")\n",
+    "\n",
+    "# JSON file\n",
+    "df_json = pd.read_json(\"data.json\")\n",
+    "\n",
+    "# SQL table (needs a database connection)\n",
+    "# df_sql = pd.read_sql(\"SELECT * FROM table_name\", connection)\n"
+   ]
   }
  ],
  "metadata": {
