--- a/skill lab/ass10/unnited.ipynb
+++ b/skill lab/ass10/unnited.ipynb
@@ -78,26 +78,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26fc2863",
+   "id": "0041c524",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV file\n",
-    "df_csv = pd.read_csv(\"data.csv\")\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
+    "    'City': ['NY', 'LA', 'NY', 'SF'],\n",
+    "    'Age': [25, 30, 35, 40]\n",
+    "}\n",
     "\n",
-    "# Excel file\n",
-    "df_excel = pd.read_excel(\"data.xlsx\")\n",
+    "df = pd.DataFrame(data)\n",
     "\n",
-    "# TSV (tab-separated)\n",
-    "df_tsv = pd.read_csv(\"data.tsv\", sep=\"\\t\")\n",
-    "\n",
-    "# JSON file\n",
-    "df_json = pd.read_json(\"data.json\")\n",
-    "\n",
-    "# SQL table (needs a database connection)\n",
-    "# df_sql = pd.read_sql(\"SELECT * FROM table_name\", connection)\n"
+    "summary = df.describe(include=['object'])\n",
+    "print(summary)\n"
    ]
   }
  ],
