--- a/skill lab/ass10/unnited.ipynb
+++ b/skill lab/ass10/unnited.ipynb
@@ -77,17 +77,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0041c524",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Name       City\n",
+      "count       4          4\n",
+      "unique      4          4\n",
+      "top     asima  sambalpur\n",
+      "freq        1          1\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "data = {\n",
-    "    'Name': ['Alice', 'Bob', 'Charlie', 'David'],\n",
-    "    'City': ['NY', 'LA', 'NY', 'SF'],\n",
-    "    'Age': [25, 30, 35, 40]\n",
+    "    'Name': ['asima', 'yuvraj', 'arindam', 'amaln'],\n",
+    "    'City': ['sambalpur', 'jajpur', 'bhubaneswar', 'bhaubaneswar'],\n",
+    "    'Age': [21, 19, 20, 21]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
