--- a/skill lab/ass10/unnited.ipynb
+++ b/skill lab/ass10/unnited.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0041c524",
    "metadata": {},
    "outputs": [
@@ -97,8 +97,8 @@
     "import pandas as pd\n",
     "\n",
     "data = {\n",
-    "    'Name': ['asima', 'yuvraj', 'arindam', 'amaln'],\n",
-    "    'City': ['sambalpur', 'jajpur', 'bhubaneswar', 'bhaubaneswar'],\n",
+    "    'Name': ['asima', 'yuvraj', 'arindam', 'namla'],\n",
+    "    'City': ['sambalpur', 'jajpur', 'bhubaneswar', 'mars'],\n",
     "    'Age': [21, 19, 20, 21]\n",
     "}\n",
     "\n",
